...
                    child: controller.isLoading.value
                        ? SizedBox(
                            height: 20,
                            width: 20,
                            child: CircularProgressIndicator(color: Colors.white, strokeWidth: 2),
                          )
                        : Text('Entrar', style: TextStyle(fontSize: 16, fontWeight: FontWeight.bold)),
                  )),
                ),
                SizedBox(height: 24),
                Row(
                  children: [
                    Expanded(child: Divider(thickness: 1, color: Colors.grey[200])),
...
                  label: 'Continuar com o Google',
                  onPressed: () => controller.signInWithGoogle(),
                ),
                SizedBox(height: 24),
                // Link para Registro
                GestureDetector(
                  key: const Key('btn_ir_cadastro'),
                  onTap: () => Get.toNamed('/register'),
                  child: RichText(
                    text: TextSpan(
                      style: TextStyle(fontSize: 14, color: Colors.black),
                      children: [
                        TextSpan(text: 'Não possui uma conta? '),
...
